shows desktop styling

--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -116,7 +116,7 @@
     }
 }
 
-@mixin shows-titles{
+@mixin JavaScript-titles{
     font-size: .8125rem;
     line-height: 1.125rem;
     font-weight: 600;
