--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -99,7 +99,7 @@
             @include body;
         }
         &__date {
-            @include shows-titles;
+            @include JavaScript-titles;
     
         }
         &__date, &__venue, &__location{
@@ -122,7 +122,7 @@
             padding-bottom: .625rem;
 
             h2 {
-                @include shows-titles;
+                @include JavaScript-titles;
             color: $sliver;
             }
         }
@@ -155,7 +155,7 @@
         &__btn{
             width: 18%;
             height: 3rem;
-            @include shows-titles;
+            @include JavaScript-titles;
         }
         // headers
         &__header {
@@ -166,7 +166,7 @@
             padding-bottom: .625rem;
 
             h2 {
-                @include shows-titles;
+                @include JavaScript-titles;
                 padding-bottom: .625rem;
                 display: flex;
             }
@@ -213,7 +213,7 @@
             margin: -0.625rem .625rem 1.25rem 0;
             width: 18%;
             height: 3rem;
-            @include shows-titles;
+            @include JavaScript-titles;
         }
         // headers
         &__header {
@@ -225,7 +225,7 @@
             margin-top: -1.5625rem;
 
             h2 {
-                @include shows-titles;
+                @include JavaScript-titles;
                 display: flex;
             }
         }
