adding more description to the alt attributes on images

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -12,6 +12,10 @@ html, body {
     overflow: auto;
 }
 
+body{
+    @include body;
+}
+
 .navigation{
     @include flex-column;
     @include flex-center;
