finishing styling the bio page

--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -154,6 +154,11 @@
     align-items: center;
 }
 
+@mixin space-around {
+    display: flex;
+    justify-content: space-around;
+}
+
 @mixin mobile-padding{
     padding: 24px 16px 16px 16px;
 }
