--- a/styles/shows.css
+++ b/styles/shows.css
@@ -27,6 +27,25 @@ html, body {
   overflow: auto;
 }
 
+body {
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  font-family: "Avenir Next Regular";
+}
+@media (min-width: 768px) {
+  body {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1280px) {
+  body {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+
 .navigation {
   display: flex;
   flex-direction: column;
@@ -535,12 +554,12 @@ html, body {
   }
 }
 .hero__soundcloud {
-  max-width: 90vw;
-  max-height: 20vw;
+  max-width: 100vw;
+  max-height: 23vw;
   display: flex;
   align-content: center;
   justify-content: center;
-  margin-left: 45px;
+  margin-left: 12px;
   padding-right: 25px;
   margin-bottom: 0px;
 }
@@ -797,7 +816,6 @@ html, body {
   }
   .shows .shows-list__item {
     padding: 1.25rem;
-    border-bottom: 0.0625rem solid #E1E1E1;
     font-size: 0.8125rem;
     line-height: 1.125rem;
     font-weight: 400;
@@ -805,6 +823,7 @@ html, body {
     display: flex;
     justify-content: space-around;
     flex-direction: flex-start;
+    position: relative;
   }
 }
 @media (min-width: 768px) and (min-width: 768px) {
@@ -820,6 +839,15 @@ html, body {
   }
 }
 @media (min-width: 768px) {
+  .shows .shows-list__item::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    width: 88%;
+    height: 0.0625rem;
+    background-color: #E1E1E1;
+    transform: translateX(-50%);
+  }
   .shows .shows-list__btn {
     width: 18%;
     height: 3rem;
