--- a/styles/shows.css
+++ b/styles/shows.css
@@ -824,6 +824,7 @@ body {
     justify-content: space-around;
     flex-direction: flex-start;
     position: relative;
+    border-bottom: none;
   }
 }
 @media (min-width: 768px) and (min-width: 768px) {
@@ -839,9 +840,10 @@ body {
   }
 }
 @media (min-width: 768px) {
-  .shows .shows-list__item::before {
+  .shows .shows-list__item::after {
     content: "";
     position: absolute;
+    bottom: 0;
     left: 50%;
     width: 88%;
     height: 0.0625rem;
