--- a/styles/shows.css
+++ b/styles/shows.css
@@ -502,6 +502,41 @@ body {
   margin: 1.875rem 0 0 3.75rem;
 }
 
+.navigation__btns .navigation__shows-btn.active::after {
+  width: 600%;
+  transform: translateX(-40%);
+}
+@media (min-width: 768px) {
+  .navigation__btns .navigation__shows-btn.active::after {
+    width: 100%;
+    height: 0.25rem;
+    width: 90%;
+    transform: translateX(-50%);
+  }
+}
+@media (min-width: 1280px) {
+  .navigation__btns .navigation__shows-btn.active::after {
+    width: 100%;
+    height: 0.25rem;
+    width: 90%;
+    transform: translateX(-50%);
+  }
+}
+@media (min-width: 768px) {
+  .navigation__btns {
+    display: flex;
+    justify-content: center;
+    margin-left: 2.5rem;
+  }
+}
+@media (min-width: 1280px) {
+  .navigation__btns {
+    display: flex;
+    justify-content: space-evenly;
+    margin-left: 2.5rem;
+  }
+}
+
 .hero {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/images/hero-shows.jpg);
   background-size: cover;
@@ -592,8 +627,8 @@ body {
 }
 @media (min-width: 768px) {
   .hero__soundcloud {
-    max-width: 45vw;
-    height: 50%;
+    max-width: 50vw;
+    height: 40%;
     display: flex;
     align-content: center;
     justify-content: center;
@@ -603,7 +638,7 @@ body {
 }
 @media (min-width: 1280px) {
   .hero {
-    height: 40vw;
+    height: 60vw;
     background-position: center;
     display: flex;
     flex-direction: row;
@@ -634,8 +669,8 @@ body {
 }
 @media (min-width: 1280px) {
   .hero__soundcloud {
-    max-width: 30vw;
-    height: 25%;
+    max-width: 36vw;
+    height: 20%;
     display: flex;
     align-content: center;
     justify-content: center;
@@ -825,6 +860,7 @@ body {
     flex-direction: flex-start;
     position: relative;
     border-bottom: none;
+    align-items: center;
   }
 }
 @media (min-width: 768px) and (min-width: 768px) {
@@ -937,7 +973,6 @@ body {
   }
   .shows .shows-list__item {
     padding: 2rem 1.25rem 0 1.25rem;
-    border-bottom: 0.0625rem solid #E1E1E1;
     font-size: 0.8125rem;
     line-height: 1.125rem;
     font-weight: 400;
@@ -945,6 +980,7 @@ body {
     display: flex;
     justify-content: space-around;
     margin-left: 300px;
+    border: none;
   }
 }
 @media (min-width: 1280px) and (min-width: 768px) {
@@ -995,7 +1031,7 @@ body {
     display: flex;
     justify-content: space-around;
     margin-bottom: 1rem;
-    margin-left: 18.8rem;
+    margin-left: 17rem;
     padding-bottom: 0;
     margin-top: -1.5625rem;
   }
