--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -10,7 +10,7 @@
     width: 600%; // Adjust this value for the new page
     transform: translateX(-40%); // Adjust to centre the border horizontally
 
-        @include tablet{
+        @include tablet {
                 width: 100%;
                 height: .25rem;
                 width: 90%; // Adjust this value for the new page
@@ -59,9 +59,9 @@
         max-width: 100vw;
         max-height: 23vw;
         @include flex-center;
-        margin-left: 12px;
-        padding-right: 25px;
-        margin-bottom: 0px;
+        margin-left: .75rem;
+        padding-right: 1.5625rem;
+        margin-bottom: 0;
     }
     @include tablet {
         background-position: center;
@@ -77,7 +77,6 @@
         &__soundcloud{
             max-width: 50vw;
             height: 40%;
-            @include flex-center;
             margin-left: 2.8125rem;
             margin-bottom: .625rem;
         }
@@ -100,7 +99,6 @@
         &__soundcloud{
             max-width: 36vw;
             height: 20%;
-            @include flex-center;
             margin-left: 2.8125rem;
             margin-bottom: .625rem;
             border-radius: .3125rem;
