--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -50,7 +50,6 @@
     }
     &__album{
         padding: 0 1.5rem 0 1.5rem;
-        @include body;
     }
     &__soundcloud{
         max-width: 100vw;
@@ -233,8 +232,8 @@
                 content: ""; 
                 position: absolute;
                 bottom: 0;
-                left: -500px;
-                right: -500px;
+                left: -31.25rem;
+                right: -31.25rem;
                 width: 10%;
             }
         }
